// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switcher 1`] = `
<label
  class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
>
  <span
    class="Switcherstyles__Handle-nl4ecl-3 eiRxnP"
  />
  <input
    class="Switcherstyles__Input-nl4ecl-2 ePUicI"
    type="checkbox"
  />
</label>
`;

exports[`Switcher w/ any props 1`] = `
<label
  class="Switcherstyles__Box-nl4ecl-1 hnUnvl className"
  id="id"
  title="title"
>
  <span
    class="Switcherstyles__Handle-nl4ecl-3 eiRxnP"
  />
  <input
    class="Switcherstyles__Input-nl4ecl-2 ePUicI"
    name="name"
    type="checkbox"
  />
  <span
    class="Switcherstyles__Caption-nl4ecl-0 cydKQj"
  >
    Label
  </span>
</label>
`;

exports[`Switcher w/ checked 1`] = `
Array [
  <label
    class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
  >
    <span
      checked=""
      class="Switcherstyles__Handle-nl4ecl-3 fBkrAL"
    />
    <input
      checked=""
      class="Switcherstyles__Input-nl4ecl-2 ePUicI"
      type="checkbox"
    />
  </label>,
  <label
    class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
  >
    <span
      checked=""
      class="Switcherstyles__Handle-nl4ecl-3 fBkrAL"
    />
    <input
      checked=""
      class="Switcherstyles__Input-nl4ecl-2 ePUicI"
      type="checkbox"
    />
    <span
      class="Switcherstyles__Caption-nl4ecl-0 cydKQj"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Switcher w/ checked and disabled 1`] = `
Array [
  <label
    class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
    disabled=""
  >
    <span
      checked=""
      class="Switcherstyles__Handle-nl4ecl-3 buMWEi"
      disabled=""
    />
    <input
      checked=""
      class="Switcherstyles__Input-nl4ecl-2 ePUicI"
      disabled=""
      type="checkbox"
    />
  </label>,
  <label
    class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
    disabled=""
  >
    <span
      checked=""
      class="Switcherstyles__Handle-nl4ecl-3 buMWEi"
      disabled=""
    />
    <input
      checked=""
      class="Switcherstyles__Input-nl4ecl-2 ePUicI"
      disabled=""
      type="checkbox"
    />
    <span
      class="Switcherstyles__Caption-nl4ecl-0 ezLBpR"
      disabled=""
    >
      Label
    </span>
  </label>,
]
`;

exports[`Switcher w/ disabled 1`] = `
Array [
  <label
    class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
    disabled=""
  >
    <span
      class="Switcherstyles__Handle-nl4ecl-3 dHTjdo"
      disabled=""
    />
    <input
      class="Switcherstyles__Input-nl4ecl-2 ePUicI"
      disabled=""
      type="checkbox"
    />
  </label>,
  <label
    class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
    disabled=""
  >
    <span
      class="Switcherstyles__Handle-nl4ecl-3 dHTjdo"
      disabled=""
    />
    <input
      class="Switcherstyles__Input-nl4ecl-2 ePUicI"
      disabled=""
      type="checkbox"
    />
    <span
      class="Switcherstyles__Caption-nl4ecl-0 ezLBpR"
      disabled=""
    >
      Label
    </span>
  </label>,
]
`;

exports[`Switcher w/ label 1`] = `
<label
  class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
>
  <span
    class="Switcherstyles__Handle-nl4ecl-3 eiRxnP"
  />
  <input
    class="Switcherstyles__Input-nl4ecl-2 ePUicI"
    type="checkbox"
  />
  <span
    class="Switcherstyles__Caption-nl4ecl-0 cydKQj"
  >
    Label
  </span>
</label>
`;

exports[`Switcher w/ name 1`] = `
Array [
  <label
    class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
  >
    <span
      class="Switcherstyles__Handle-nl4ecl-3 eiRxnP"
    />
    <input
      class="Switcherstyles__Input-nl4ecl-2 ePUicI"
      name="switcher1"
      type="checkbox"
    />
  </label>,
  <label
    class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
  >
    <span
      class="Switcherstyles__Handle-nl4ecl-3 eiRxnP"
    />
    <input
      class="Switcherstyles__Input-nl4ecl-2 ePUicI"
      name="switcher2"
      type="checkbox"
    />
    <span
      class="Switcherstyles__Caption-nl4ecl-0 cydKQj"
    >
      Label
    </span>
  </label>,
]
`;

exports[`Switcher w/ size: l 1`] = `
<label
  class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
>
  <span
    class="Switcherstyles__Handle-nl4ecl-3 cDhOpV"
  />
  <input
    class="Switcherstyles__Input-nl4ecl-2 ePUicI"
    type="checkbox"
  />
  <span
    class="Switcherstyles__Caption-nl4ecl-0 bnhcym"
  >
    Label
  </span>
</label>
`;

exports[`Switcher w/ size: m 1`] = `
<label
  class="Switcherstyles__Box-nl4ecl-1 hnUnvl"
>
  <span
    class="Switcherstyles__Handle-nl4ecl-3 eiRxnP"
  />
  <input
    class="Switcherstyles__Input-nl4ecl-2 ePUicI"
    type="checkbox"
  />
  <span
    class="Switcherstyles__Caption-nl4ecl-0 cydKQj"
  >
    Label
  </span>
</label>
`;
